柔道倒數加分跟黃牌加分
到數和10和20加對方分數
黃牌加對方分數2次

--- a/static/kyc_judo_styles.css
+++ b/static/kyc_judo_styles.css
@@ -116,12 +116,12 @@ body {
     position: absolute;
     width: 100%;
     font-size: 25px;
-    color: white;
+    color: black;
     padding: 2px;
 }
 .player-a .player-name {
     top: 0;
-    left: 0;
+    left: 0%;
 }
 .player-b .player-name {
     bottom: 0;
