--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,7 @@
         <a href="/jscore" class="option">柔道計分</a>
         <a href="/kycscore" class="option">克拉柔計分</a>
         <a href="/wscore" class="option">摔角計分</a>
-        <a href="/wscore" class="option">角力計分</a>
+        <!-- <a href="/wscore" class="option">角力計分</a> -->
     </div>
 </body>
 </html>
