--- a/templates/judo_score.html
+++ b/templates/judo_score.html
@@ -50,12 +50,11 @@
         </form>
         {% endif %}
         
-        <div class="header">{{ number or "場序128" }}</div>
-        <div class="group">
-            <!-- <div class="category">組別</div> -->
-            <div>{{ subject or "社會男子組-81KG" }}</div>
-            <!-- <div>-81KG</div> -->
+        <div class="header">
+            {{ number or "場序128" }}<br>
+            {{ subject or "社會男子組-81KG" }}
         </div>
+        
         <div class="players-container">
             <div class="players player-a" style="background-color: white;">
                 <div class="takedown-time" id="player1-score" onclick="takedownIncrement('player1-score', document.querySelector('.player-b .score-box'))">0</div>
