--- a/templates/kyc_score.html
+++ b/templates/kyc_score.html
@@ -41,10 +41,11 @@
         </form>
         {% endif %}
         
-        <div class="header">{{ number or "場序128" }}</div>
-        <div class="group">
-            <div>{{ subject or "社會男子組-81KG" }}</div>
+        <div class="header">
+            {{ number or "場序128" }}<br>
+            {{ subject or "社會男子組-81KG" }}
         </div>
+        
         <div class="players-container">
             <div class="players player-a">
                 <div class="player-name">
