--- a/templates/wrest_score.html
+++ b/templates/wrest_score.html
@@ -44,9 +44,10 @@
 
         <!-- 比賽資訊 -->
         <div class="info">
-            <div>{{ subject or "社會男子組-81KG" }}</div>
-            <hr style="border: 0; border-top: 1px solid white;">
-            <div>{{ number or "總場128" }}</div>
+            <div>
+                {{ subject or "社會男子組-81KG" }}<br>
+                {{ number or "總場128" }}
+            </div>
         </div>
 
         <!-- 計分板 -->
